fix unknown characters

--- a/resonators_and_waveguides/Batygin_Toptygin_task_464_465.ipynb
+++ b/resonators_and_waveguides/Batygin_Toptygin_task_464_465.ipynb
@@ -12,11 +12,11 @@
     "ЭЛЕКТРОДИНАМИКЕ\n",
     "МОСКВА 1970\n",
     "\n",
-    "512. Бесконечно протяженный диэлектрический слой заполняет в вакууме область $-а <= х <= а$ и имеет проницаемости $\\epsilon$ и $\\mu$.\n",
-    "Показать, что такой слой может действовать как волновод (для этого нужно, чтобы поле бегущей электромагнитной волны концентрировалось, в основном, внутри слоя). Определить типы волн, которые могут распространяться в таком волноводе. Ограничиться случаем, когда векторы поля не зависят от координаты $у$.\n",
+    "512. Бесконечно протяженный диэлектрический слой заполняет в вакууме область $-a<=x<=a$ и имеет проницаемости $\\epsilon$ и $\\mu$.\n",
+    "Показать, что такой слой может действовать как волновод (для этого нужно, чтобы поле бегущей электромагнитной волны концентрировалось, в основном, внутри слоя). Определить типы волн, которые могут распространяться в таком волноводе. Ограничиться случаем, когда векторы поля не зависят от координаты $y$.\n",
     "\n",
-    "513. Диэлектрический слой с проницаемостями $\\epsilon$, $\\mu$, заполняющий область $0 <= х <= а$, нанесен на поверхность идеального\n",
-    "проводника. В области $х>а$ - вакуум. Какие типы электромагнитных волн с амплитудой, убывающей при удалении от слоя, могут распространяться вдоль слоя? Сравнить возможные типы волн с системой волн, полученной в предыдущей задаче.\n",
+    "513. Диэлектрический слой с проницаемостями $\\epsilon$, $\\mu$, заполняющий область $0<=x<=a$, нанесен на поверхность идеального\n",
+    "проводника. В области $x>a$ - вакуум. Какие типы электромагнитных волн с амплитудой, убывающей при удалении от слоя, могут распространяться вдоль слоя? Сравнить возможные типы волн с системой волн, полученной в предыдущей задаче.\n",
     "\n",
     "В издании 1962 года номера этих задач 464 и 465"
    ]
